--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
 
       <nav class="navigation">
         <a class="main-logo" href="index.html">
-          <img class="main-logo-img" src="images/sedona-logo.svg" width="138" height="64" alt="Логотип Седоны">
+          <img class="main-logo-img" src="images/sedona-logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
 
         <ul class="list navigation-list">
 
           <li class="navigation-item">
-            <a class="link navigation-link" href="#" aria-current="page" >Главная</a>
+            <a class="link navigation-link" href="#" aria-current="page">Главная</a>
           </li>
 
           <li class="navigation-item">
-            <a class="link navigation-link" href="#" >О Седоне</a>
+            <a class="link navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="link navigation-link" href="catalog.html" >Гостиницы</a>
+            <a class="link navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
 
         <ul class="list navigation-list navigation-user">
           <li class="navigation-user-item">
-            <a class="link navigation-link" href="#">
+            <a class="link navigation-user-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
 
           <li class="navigation-user-item">
-            <a class="link navigation-link" href="#">
+            <a class="link navigation-user-link" href="#">
                   <span class="visually-hidden">Избранное</span>
-                  12
+                  <span class="visually-hidden">12</span>
             </a>
           </li>
 
           <li class="navigation-user-item">
-            <a class="button button-primary" href="#">
+            <a class="button button-primary navigation-user-button" href="#">
                 ХОЧУ СЮДА!
             </a>
           </li>
@@ -58,9 +58,9 @@
         <div class="hero">
           <img class="block-img hero-img" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </div>
-        <h2 class="header hero-header">Седона — небольшой городок в Аризоне,
+        <h2 class="header hero-header">Седона — небольшой городок в Аризоне,<br>
           заслуживающий большего!</h2>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="hero-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="advantages" data-test="advantages">
@@ -115,9 +115,9 @@
       </section>
       <section class="sedona-invitation">
         <h2 class="header sedona-invitation-header">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
+          Приезжайте в Седону отдохнуть<br> в комфорте и уюте!
         </h2>
-        <p>Опытный персонал и качественное обслуживание!</p>
+        <p class="sedona-invitation-text">Опытный персонал и качественное обслуживание!</p>
 
       </section>
 
@@ -183,18 +183,24 @@
 
         <ul class="list social-list">
           <li class="social-item">
-            <a class="link social-link" href="https://vk.com/htmlacademy">
-              <img src="images/social-networks/vk.svg" alt="Перейти на страницу вконтакте">
+            <a class="link social-link vk-logo" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">
+                Вконтакте
+              </span>
             </a>
           </li>
           <li class="social-item">
-            <a class="link social-link" href="https://t.me/htmlacademy ">
-              <img src="images/social-networks/telegram.svg" alt="Перейти на telegram канал">
+            <a class="link social-link tg-logo" href="https://t.me/htmlacademy ">
+              <span class="visually-hidden">
+                Телеграмм
+              </span>
             </a>
           </li>
           <li class="social-item">
-            <a class="link social-link" href="https://www.youtube.com/user/htmlacademyru">
-              <img src="images/social-networks/youtube.svg" alt="Перейти на YouTube канал">
+            <a class="link social-link youtube-logo" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">
+                Ютуб
+              </span>
             </a>
           </li>
         </ul>
@@ -203,7 +209,9 @@
           <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="link html-academy-link" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="images/htmlacademy.svg" alt="HTMLAcademy">
+              <span class="visually-hidden">
+                HTMLAcademy
+              </span>
         </a>
 
       </div>
